<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_cappuccino"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cappuccino"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/view_cappuccino"
        app:layout_constraintEnd_toEndOf="@id/view_cappuccino"
        app:layout_constraintStart_toStartOf="@id/view_cappuccino"
        app:layout_constraintTop_toTopOf="@id/view_cappuccino" />

    <ImageView
        android:id="@+id/image_clock"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_access_time"
        app:layout_constraintEnd_toStartOf="@id/image_favorite"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_cappuccino"
        app:tint="@color/brown" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/view_cappuccino"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/text_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minute"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_clock"
        app:layout_constraintStart_toStartOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/image_clock" />

    <TextView
        android:id="@+id/text_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_favorite"
        app:layout_constraintStart_toStartOf="@id/image_favorite"
        app:layout_constraintTop_toBottomOf="@id/image_favorite" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_minute" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="26dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separator" />

    <TextView
        android:id="@+id/text_ingredients_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ingredients"
        android:textColor="@color/brown"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view_separator"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <ImageView
        android:id="@+id/image_arrow_first_item"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_item"
        app:layout_constraintStart_toStartOf="@id/text_ingredients_title"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients_title"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/text_first_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_ingredient"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_first_item"
        app:layout_constraintStart_toEndOf="@id/image_arrow_first_item"
        app:layout_constraintTop_toTopOf="@id/image_arrow_first_item" />

    <ImageView
        android:id="@+id/image_arrow_second_item"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_arrow_item"
        app:layout_constraintStart_toStartOf="@id/text_ingredients_title"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_first_item"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/text_second_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_ingredient"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_second_item"
        app:layout_constraintStart_toEndOf="@id/image_arrow_second_item"
        app:layout_constraintTop_toTopOf="@id/image_arrow_second_item" />

    <ImageView
        android:id="@+id/image_arrow_third_item"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_arrow_item"
        app:layout_constraintStart_toStartOf="@id/text_ingredients_title"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_second_item"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/text_third_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_ingredient"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_third_item"
        app:layout_constraintStart_toEndOf="@id/image_arrow_third_item"
        app:layout_constraintTop_toTopOf="@id/image_arrow_third_item" />

</androidx.constraintlayout.widget.ConstraintLayout>